Fix: Reports page alignment fixed

--- a/web/src/Pages/private/Reports/Reports.scss
+++ b/web/src/Pages/private/Reports/Reports.scss
@@ -4,22 +4,18 @@
   .chart-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    gap: 2em;
 
     width: 80dvw;
     height: 70dvh;
-    margin-top: 2rem;
 
-    div {
+    .reports-filters {
       display: flex;
       flex-direction: row;
       align-items: center;
       gap: 0.5em;
 
       width: 60%;
-
-      position: absolute;
-      bottom: 43rem;
 
       .reports-search-bar {
         width: 24%;
@@ -39,7 +35,6 @@
         border-radius: 8px;
         border: 1px solid var(--button-lime-green);
         outline: none;
-
 
         cursor: pointer;
       }
@@ -68,6 +63,10 @@
           margin: 0;
         }
       }
+    }
+
+    .charts {
+      height: 90%;
     }
   }
 }
